lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_return-3.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_return()
---
Ok(
    Return(
        Return {
            value: Some(
                Return(
                    Return {
                        value: Some(
                            I64(
                                I64Lit {
                                    base: Dec,
                                    value: "2",
                                    span: Span {
                                        file: FileId(
                                            0,
                                        ),
                                        start: 14,
                                        end: 15,
                                    },
                                },
                            ),
                        ),
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            start: 14,
                            end: 15,
                        },
                    },
                ),
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 14,
                end: 15,
            },
        },
    ),
)
