lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_return-4.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_expr()
---
Ok(
    Case(
        Case {
            scrutinee: Nil(
                NilLit {
                    span: Span {
                        start: 5,
                        end: 8,
                    },
                },
            ),
            arms: [
                CaseArm {
                    pattern: Pattern {
                        inner: [
                            Literal(
                                Nil(
                                    NilLit {
                                        span: Span {
                                            start: 11,
                                            end: 14,
                                        },
                                    },
                                ),
                            ),
                        ],
                        span: Span {
                            start: 11,
                            end: 14,
                        },
                    },
                    body: Return(
                        Return {
                            value: None,
                            span: Span {
                                start: 18,
                                end: 24,
                            },
                        },
                    ),
                    span: Span {
                        start: 11,
                        end: 25,
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 27,
            },
        },
    ),
)
