lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_return-5.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_expr()
---
Ok(
    List(
        List {
            values: [
                Return(
                    Return {
                        value: None,
                        span: Span {
                            start: 1,
                            end: 7,
                        },
                    },
                ),
            ],
            span: Span {
                start: 0,
                end: 9,
            },
        },
    ),
)
