lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_return-7.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_expr()
---
Ok(
    Block(
        Block {
            statements: [],
            value: Some(
                Return(
                    Return {
                        value: None,
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            start: 2,
                            end: 8,
                        },
                    },
                ),
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 10,
            },
        },
    ),
)
