lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_return.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_return()
---
Ok(
    Return(
        Return {
            value: None,
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 6,
            },
        },
    ),
)
