lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_statement-2.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_stmt()
---
Ok(
    Expr(
        ExprStatement {
            expr: I64(
                I64Lit {
                    base: Dec,
                    value: "2",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 0,
                        end: 1,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 2,
            },
        },
    ),
)
