lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_statement-3.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_stmt()
---
Ok(
    Expr(
        ExprStatement {
            expr: FnDef(
                FnDef {
                    args: [
                        Ident {
                            raw: "a",
                            span: Span {
                                start: 3,
                                end: 4,
                            },
                        },
                        Ident {
                            raw: "b",
                            span: Span {
                                start: 6,
                                end: 7,
                            },
                        },
                    ],
                    body: FnDef(
                        FnDef {
                            args: [
                                Ident {
                                    raw: "c",
                                    span: Span {
                                        start: 15,
                                        end: 16,
                                    },
                                },
                            ],
                            body: FnDef(
                                FnDef {
                                    args: [
                                        Ident {
                                            raw: "d",
                                            span: Span {
                                                start: 24,
                                                end: 25,
                                            },
                                        },
                                        Ident {
                                            raw: "e",
                                            span: Span {
                                                start: 27,
                                                end: 28,
                                            },
                                        },
                                    ],
                                    body: Nil(
                                        NilLit {
                                            span: Span {
                                                start: 34,
                                                end: 37,
                                            },
                                        },
                                    ),
                                    recursive: false,
                                    span: Span {
                                        start: 21,
                                        end: 37,
                                    },
                                },
                            ),
                            recursive: false,
                            span: Span {
                                start: 12,
                                end: 37,
                            },
                        },
                    ),
                    recursive: false,
                    span: Span {
                        start: 0,
                        end: 37,
                    },
                },
            ),
            span: Span {
                start: 0,
                end: 38,
            },
        },
    ),
)
