lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_statement.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_stmt()
---
Ok(
    Define(
        Define {
            ident: Ident {
                raw: "x",
                span: Span {
                    start: 4,
                    end: 5,
                },
            },
            typ: None,
            value: I64(
                I64Lit {
                    base: Dec,
                    value: "2",
                    span: Span {
                        start: 9,
                        end: 10,
                    },
                },
            ),
            span: Span {
                start: 0,
                end: 11,
            },
        },
    ),
)
