lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_types-2.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_type()
---
Ok(
    Named(
        NamedType {
            name: Ident {
                raw: "list",
                span: Span {
                    start: 0,
                    end: 4,
                },
            },
            gens: Some(
                Generics {
                    params: [
                        Generic {
                            id: Named(
                                NamedType {
                                    name: Ident {
                                        raw: "a",
                                        span: Span {
                                            start: 5,
                                            end: 6,
                                        },
                                    },
                                    gens: None,
                                    span: Span {
                                        start: 5,
                                        end: 6,
                                    },
                                },
                            ),
                            span: Span {
                                start: 5,
                                end: 6,
                            },
                        },
                    ],
                    span: Span {
                        start: 4,
                        end: 7,
                    },
                },
            ),
            span: Span {
                start: 0,
                end: 7,
            },
        },
    ),
)
